--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://app.kodeiya.com",
   "dependencies": {
+    "google-map-react": "^1.1.6",
     "node-sass": "^4.11.0",
     "react": "^16.0.0",
     "react-day-picker": "^7.3.0",
